fix : overflow of project section

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,6 +1,7 @@
 .contact{
     width: 100vw;
     height: 70vh;
+    margin-top: 50px;
 
     >.contact-container{
 
