--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -4,14 +4,16 @@
     display: flex;
     margin-top: 100px;
     margin: 0 auto;
+    padding-top: 100px;
 
     >.experience-left{
-        width: 30%;
+        width: 40%;
         height: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         gap: 20px;
+        padding-left: 100px;
         padding-left: 100px;
 
         >img:first-of-type{
