--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -1,11 +1,35 @@
 .project {
     width: 100%;
-    min-height: 330vh;
+    height: 150vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
+
+
+
+.project-cards{
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+}
+
+.project-cards::-webkit-scrollbar{
+    background-color: transparent;
+    height: 100px;
+    width: 10px;
+}
+
+.project-cards::-webkit-scrollbar-thumb{
+    background-color: rgba(255, 166, 0, 0.391);
+    border-radius: 20px;
+    border: 2px solid rgba(0, 0, 0, 0.468);
+}
 .project-heading {
     display: flex;
     align-items: center;
